# KronosSol

./: .gitignore  Kronos_Solana_DApp_Presentation.md  README.md
kronos-dapp/: README.md  docker-compose.yml  start.sh
kronos-dapp/app/: package.json  tailwind.config.js
kronos-dapp/programs/kronos_dapp/: Cargo.toml
kronos-dapp/programs/kronos_dapp/src/: lib.rs
kronos-dapp/scripts/: deploy.sh
kronos-dapp/server/: Dockerfile  binance-service.js  finnhub-service.js  index.js  kronos_predictor.py  package.json  run_kronos_prediction.py
