[package]
name = "kronos_dapp"
version = "0.1.0"
description = "Kronos DApp Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kronos_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
